# iridium-sniffer

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  burst_detect.c  burst_detect.h  burst_downmix.c  burst_downmix.h  doppler_pos.c  fftw_lock.h  fir_filter.c  fir_filter.h  frame_decode.c  frame_decode.h  frame_output.c  frame_output.h  gsmtap.c  gsmtap.h  ida_decode.c  ida_decode.h  iridium.h  main.c  options.c  qpsk_demod.c  qpsk_demod.h  rotator.h  sbd_acars.c  sbd_acars.h  simd_avx2.c  simd_generic.c  simd_kernels.h  soapysdr.c  web_map.c  web_map.h  window_func.c  window_func.h
examples/: airspy-r2.sh  bladerf.sh  hackrf.sh  rtl-sdr.sh  usrp-b2x0.sh
opencl/: burst_fft.c  burst_fft.h
vulkan/: burst_fft.c
